--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-04 01:18+0300\n"
+"POT-Creation-Date: 2022-12-04 01:58+0300\n"
 "PO-Revision-Date: 2022-10-31 18:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1462,6 +1462,7 @@ msgstr "Зброя"
 #: storage/models/storage.py:107
 #, fuzzy
 #| msgid "Уровень ТЭЦ"
+msgctxt "storage"
 msgid "Уровень"
 msgstr "Узровень ЦЭС"
 
@@ -2077,6 +2078,24 @@ msgctxt "storage_upgrade"
 msgid "Стоимость"
 msgstr "Цягавітасьць"
 
+#: storage/templates/storage/redesign/storage.html:213
+msgctxt "storage_upgrade"
+msgid "Максимальный уровень"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:230
+#: storage/templates/storage/redesign/storage.html:350
+msgctxt "storage_upgrade"
+msgid "улучшить"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:233
+#, fuzzy
+#| msgid "Пополнение энергии"
+msgctxt "storage_upgrade"
+msgid "Недостаточно материалов"
+msgstr "Папаўненьне энэргіі"
+
 #: storage/templates/storage/redesign/storage.html:252
 msgctxt "storage_upgrade"
 msgid ""
@@ -2097,11 +2116,6 @@ msgstr ""
 #: storage/templates/storage/redesign/storage.html:313
 msgctxt "storage_upgrade"
 msgid "Малый объём запасов"
-msgstr ""
-
-#: storage/templates/storage/redesign/storage.html:350
-msgctxt "storage_upgrade"
-msgid "улучшить"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:357
