--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-04 01:18+0300\n"
+"POT-Creation-Date: 2022-12-04 01:58+0300\n"
 "PO-Revision-Date: 2022-12-03 16:14+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1367,6 +1367,7 @@ msgstr "Waffen"
 #: storage/models/storage.py:107
 #, fuzzy
 #| msgid "Уровень ТЭЦ"
+msgctxt "storage"
 msgid "Уровень"
 msgstr "Heizkraftwerk"
 
@@ -1976,6 +1977,25 @@ msgctxt "storage_upgrade"
 msgid "Стоимость"
 msgstr "Kosten"
 
+#: storage/templates/storage/redesign/storage.html:213
+msgctxt "storage_upgrade"
+msgid "Максимальный уровень"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:230
+#: storage/templates/storage/redesign/storage.html:350
+msgctxt "storage_upgrade"
+msgid "улучшить"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:233
+#, fuzzy
+#| msgctxt "mining"
+#| msgid "Недостаточно энергии"
+msgctxt "storage_upgrade"
+msgid "Недостаточно материалов"
+msgstr "Nicht genug Energie"
+
 #: storage/templates/storage/redesign/storage.html:252
 msgctxt "storage_upgrade"
 msgid ""
@@ -1996,11 +2016,6 @@ msgstr ""
 #: storage/templates/storage/redesign/storage.html:313
 msgctxt "storage_upgrade"
 msgid "Малый объём запасов"
-msgstr ""
-
-#: storage/templates/storage/redesign/storage.html:350
-msgctxt "storage_upgrade"
-msgid "улучшить"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:357
