--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-04 01:18+0300\n"
+"POT-Creation-Date: 2022-12-04 01:58+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1362,6 +1362,9 @@ msgid "Оружие"
 msgstr "Senjata"
 
 #: storage/models/storage.py:107
+#, fuzzy
+#| msgid "Уровень"
+msgctxt "storage"
 msgid "Уровень"
 msgstr "Level pembangkit listrik"
 
@@ -1979,6 +1982,25 @@ msgctxt "storage_upgrade"
 msgid "Стоимость"
 msgstr "harga"
 
+#: storage/templates/storage/redesign/storage.html:213
+msgctxt "storage_upgrade"
+msgid "Максимальный уровень"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:230
+#: storage/templates/storage/redesign/storage.html:350
+msgctxt "storage_upgrade"
+msgid "улучшить"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:233
+#, fuzzy
+#| msgctxt "mining"
+#| msgid "Недостаточно энергии"
+msgctxt "storage_upgrade"
+msgid "Недостаточно материалов"
+msgstr "Energi tidak cukup"
+
 #: storage/templates/storage/redesign/storage.html:252
 msgctxt "storage_upgrade"
 msgid ""
@@ -1999,11 +2021,6 @@ msgstr ""
 #: storage/templates/storage/redesign/storage.html:313
 msgctxt "storage_upgrade"
 msgid "Малый объём запасов"
-msgstr ""
-
-#: storage/templates/storage/redesign/storage.html:350
-msgctxt "storage_upgrade"
-msgid "улучшить"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:357
